# rust_web_scraper_cli

./: .dockerignore  Cargo.toml  Dockerfile  README.md  bot.rs  links.csv  output.json  replit.nix
lib.rs/: main.rs
src/: bot_main.rs  main.rs  scrape.rs  scraper.rs  token_scanner.rs
src/token_scanner/: mod.rs
