[package]
name = "web_scraper_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11", features = ["client", "gateway", "model", "framework", "standard_framework"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18.1"
anyhow = "1.0"

[[bin]]
name = "bot_main"
path = "src/bot_main.rs"