[package]
name = "web_scraper_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serenity = { version = "0.11", features = ["framework", "client", "gateway", "model", "standard_framework"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
scraper = "0.18"
serde_json = "1.0"
dotenv = "0.15"

[[bin]]
name = "bot_main"
path = "src/bot_main.rs"