[package]
name = "web_scraper_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
tokio = { version = "1.35", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13"
serde_json = "1.0"

[[bin]]
name = "bot_main"
path = "src/bot_main.rs"